--- a/index.html
+++ b/index.html
@@ -8,21 +8,13 @@
     <title>HTML Title</title>
   </head>
   <body>
-    <div class="container">
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
+    <div class="cont">
+      <h1 id="pokename">Vacio</h1>
+      <img id="pokeimg" src="" alt="pokemon" />
     </div>
+
+    <input type="text" placeholder="Enter text" onblur="getVal()" />
+
+    <script src="./index.js"></script>
   </body>
 </html>
