--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
       <img id="pokeimg" src="" alt="pokemon" />
     </div>
 
-    <input type="text" placeholder="Enter text" onblur="getVal()" />
+    <input
+      class="input"
+      type="text"
+      placeholder="Enter a pokemon ID"
+      onblur="getVal()"
+    />
+    <input class="input" type="submit" value="Search" />
 
     <script src="./index.js"></script>
   </body>
