--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="cont">
-      <h1 id="pokename">Vacio</h1>
+      <h1 id="pokename">Empty</h1>
       <img id="pokeimg" src="" alt="pokemon" />
     </div>
 
